# racfs

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
crates/racfs-cli/: Cargo.toml
crates/racfs-cli/src/: main.rs
crates/racfs-client/: Cargo.toml
crates/racfs-client/examples/: basic_crud.rs  load_test.rs
crates/racfs-client/src/: client.rs  lib.rs  types.rs
crates/racfs-core/: Cargo.toml
crates/racfs-core/examples/: foyer_cache_usage.rs
crates/racfs-core/src/: cache.rs  compression.rs  error.rs  file_handle.rs  filesystem.rs  flags.rs  lib.rs  metadata.rs  proptest_tests.rs
crates/racfs-fuse/: Cargo.toml
crates/racfs-fuse/benches/: fuse_async_ops.rs
crates/racfs-fuse/examples/: mount.rs
crates/racfs-fuse/src/: advanced.rs  async_fs.rs  blocking_adapter.rs  cache.rs  error.rs  inode_manager.rs  lib.rs  main.rs
crates/racfs-fuse/tests/: integration_tests.rs  posix_compliance.rs
crates/racfs-http-error/: Cargo.toml
crates/racfs-http-error/src/: error_code.rs  error_response.rs  lib.rs
crates/racfs-plugin-devfs/: Cargo.toml
crates/racfs-plugin-devfs/src/: lib.rs
crates/racfs-plugin-devfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-heartbeatfs/: Cargo.toml
crates/racfs-plugin-heartbeatfs/src/: lib.rs
crates/racfs-plugin-heartbeatfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-hellofs/: Cargo.toml
crates/racfs-plugin-hellofs/src/: lib.rs
crates/racfs-plugin-hellofs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-httpfs/: Cargo.toml
crates/racfs-plugin-httpfs/src/: lib.rs
crates/racfs-plugin-httpfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-kvfs/: Cargo.toml
crates/racfs-plugin-kvfs/src/: lib.rs
crates/racfs-plugin-kvfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-localfs/: Cargo.toml
crates/racfs-plugin-localfs/benches/: localfs_ops.rs
crates/racfs-plugin-localfs/src/: lib.rs
crates/racfs-plugin-localfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-memfs/: Cargo.toml
crates/racfs-plugin-memfs/benches/: memfs_ops.rs
crates/racfs-plugin-memfs/src/: lib.rs
crates/racfs-plugin-memfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-pgsfs/: Cargo.toml
crates/racfs-plugin-pgsfs/src/: lib.rs
crates/racfs-plugin-pgsfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-proxyfs/: Cargo.toml
crates/racfs-plugin-proxyfs/src/: lib.rs
crates/racfs-plugin-proxyfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-queuefs/: Cargo.toml
crates/racfs-plugin-queuefs/src/: lib.rs
crates/racfs-plugin-queuefs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-s3fs/: Cargo.toml
crates/racfs-plugin-s3fs/benches/: s3fs_ops.rs
crates/racfs-plugin-s3fs/src/: config.rs  lib.rs  tests.rs
crates/racfs-plugin-s3fs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-s3fs/tests/: s3_integration.rs
crates/racfs-plugin-serverinfofs/: Cargo.toml
crates/racfs-plugin-serverinfofs/src/: lib.rs
crates/racfs-plugin-serverinfofs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-sqlfs/: Cargo.toml
crates/racfs-plugin-sqlfs/src/: lib.rs
crates/racfs-plugin-sqlfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-streamfs/: Cargo.toml
crates/racfs-plugin-streamfs/src/: lib.rs
crates/racfs-plugin-streamfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-streamrotatefs/: Cargo.toml
crates/racfs-plugin-streamrotatefs/src/: lib.rs
crates/racfs-plugin-streamrotatefs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-plugin-vectorfs/: Cargo.toml
crates/racfs-plugin-vectorfs/src/: config.rs  lib.rs  tests.rs
crates/racfs-plugin-vectorfs/src/fs/: chmod.rs  dir.rs  mod.rs  read.rs  write.rs
crates/racfs-server/: Cargo.toml
crates/racfs-server/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  ratelimit.rs  stat_cache.rs  state.rs  validation.rs
crates/racfs-server/src/api/: auth_api.rs  directories.rs  files.rs  health.rs  metadata.rs  metrics.rs  mod.rs  xattr.rs
crates/racfs-server/src/auth/: api_key.rs  error.rs  jwt.rs  middleware.rs  mod.rs  models.rs
crates/racfs-server/src/observability/: metrics.rs  mod.rs  tracing.rs
crates/racfs-server/tests/: integration_tests.rs
crates/racfs-vfs/: Cargo.toml  vector_db
crates/racfs-vfs/examples/: cached_fs_usage.rs  custom_plugin.rs  s3_integration.rs  streaming_data.rs
crates/racfs-vfs/src/: cached_fs.rs  handle_manager.rs  lib.rs  mountable_fs.rs  plugin_metrics.rs
docker/: .dockerignore  Dockerfile  README.md
docs/: api-review.md  architecture.md  async-filesystem-migration.md  chaos-testing.md  fuse-usage.md  performance-tuning.md  plugin-development.md  plugin-ecosystem.md  production-deployment.md  quick-reference.md  roadmap-update-summary.md  sdk-installation.md  v0.2.0-tasks.md  version-sync.md
docs/book/: README.md  book.toml
docs/book/src/: SUMMARY.md  intro.md  more.md
docs/book/src/plugins/: devfs.md  heartbeatfs.md  hellofs.md  httpfs.md  kvfs.md  localfs.md  memfs.md  overview.md  pgsfs.md  proxyfs.md  queuefs.md  s3fs.md  serverinfofs.md  sqlfs.md  streamfs.md  streamrotatefs.md  vectorfs.md
examples/configs/: README.md  cached.toml  default.toml  kvfs.toml  kvfs_persistent.toml  localfs.toml  proxyfs.toml  queuefs.toml  streamfs.toml  vectorfs.toml
just/: build.just  dev.just  doc.just  lint.just  run.just  test.just
