[workspace]
resolver = "3"
members = [
    "crates/racfs-core",
    "crates/racfs-http-error",
    "crates/racfs-vfs",
    "crates/racfs-plugin-devfs",
    "crates/racfs-plugin-heartbeatfs",
    "crates/racfs-plugin-hellofs",
    "crates/racfs-plugin-httpfs",
    "crates/racfs-plugin-kvfs",
    "crates/racfs-plugin-localfs",
    "crates/racfs-plugin-memfs",
    "crates/racfs-plugin-pgsfs",
    "crates/racfs-plugin-proxyfs",
    "crates/racfs-plugin-queuefs",
    "crates/racfs-plugin-s3fs",
    "crates/racfs-plugin-serverinfofs",
    "crates/racfs-plugin-sqlfs",
    "crates/racfs-plugin-streamfs",
    "crates/racfs-plugin-streamrotatefs",
    "crates/racfs-plugin-vectorfs",
    "crates/racfs-client",
    "crates/racfs-server",
    "crates/racfs-fuse",
    "crates/racfs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RACFS Team"]
license = "MIT"
repository = "https://github.com/adamcavendish/racfs"

[workspace.dependencies]
arrow-array = "57"
arrow-schema = "57"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-types = "1"
axum = "0.8.8"
base64 = "0.22"
bcrypt = "0.19.0"
bitflags = "2.11.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
dashmap = "6.1"
foyer = "0.22.3"
fuser = { version = "0.17.0", features = ["experimental"] }
futures = "0.3"
futures-util = "0.3.32"
hmac = "0.12"
hostname = "0.4"
http = "1.0"
indicatif = "0.18.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lancedb = { version = "0.26", features = ["aws"] }
libc = "0.2.183"
num_cpus = "1.16"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-stdout = "0.31"
opentelemetry_sdk = "0.31"
parking_lot = "0.12.5"
prometheus = "0.14"
proptest = "1.5"
quick-xml = { version = "0.39.2", features = ["serialize"] }
radix_trie = "0.3.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "query", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
snafu = "0.9.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tempfile = "3"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tonic = "0.14.5"
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2"
urlencoding = "2"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.22.0", features = ["v4", "v7", "serde"] }
zstd = "0.13"

racfs-client = { path = "crates/racfs-client" }
racfs-core = { path = "crates/racfs-core" }
racfs-fuse = { path = "crates/racfs-fuse" }
racfs-http-error = { path = "crates/racfs-http-error" }
racfs-server = { path = "crates/racfs-server" }
racfs-vfs = { path = "crates/racfs-vfs" }
racfs-plugin-devfs = { path = "crates/racfs-plugin-devfs" }
racfs-plugin-heartbeatfs = { path = "crates/racfs-plugin-heartbeatfs" }
racfs-plugin-hellofs = { path = "crates/racfs-plugin-hellofs" }
racfs-plugin-httpfs = { path = "crates/racfs-plugin-httpfs" }
racfs-plugin-kvfs = { path = "crates/racfs-plugin-kvfs" }
racfs-plugin-localfs = { path = "crates/racfs-plugin-localfs" }
racfs-plugin-memfs = { path = "crates/racfs-plugin-memfs" }
racfs-plugin-pgsfs = { path = "crates/racfs-plugin-pgsfs" }
racfs-plugin-proxyfs = { path = "crates/racfs-plugin-proxyfs" }
racfs-plugin-queuefs = { path = "crates/racfs-plugin-queuefs" }
racfs-plugin-s3fs = { path = "crates/racfs-plugin-s3fs" }
racfs-plugin-serverinfofs = { path = "crates/racfs-plugin-serverinfofs" }
racfs-plugin-sqlfs = { path = "crates/racfs-plugin-sqlfs" }
racfs-plugin-streamfs = { path = "crates/racfs-plugin-streamfs" }
racfs-plugin-streamrotatefs = { path = "crates/racfs-plugin-streamrotatefs" }
racfs-plugin-vectorfs = { path = "crates/racfs-plugin-vectorfs" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
