[package]
name = "racfs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true

racfs-core.workspace = true
racfs-http-error.workspace = true

[dev-dependencies]
proptest.workspace = true
