[package]
name = "racfs-plugin-localfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bench]]
name = "localfs_ops"
harness = false

[dependencies]
async-trait.workspace = true
tokio.workspace = true

racfs-core.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio.workspace = true
