[package]
name = "racfs-plugin-queuefs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true

racfs-core.workspace = true

[dev-dependencies]
tokio.workspace = true
