[package]
name = "racfs-plugin-streamrotatefs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true

racfs-core.workspace = true

[dev-dependencies]
tokio.workspace = true
