[package]
name = "racfs-plugin-vectorfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
lancedb.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

racfs-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
