[package]
name = "racfs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "racfs-server"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

racfs-core.workspace = true
racfs-http-error.workspace = true
racfs-plugin-devfs.workspace = true
racfs-plugin-kvfs.workspace = true
racfs-plugin-localfs.workspace = true
racfs-plugin-memfs.workspace = true
racfs-plugin-proxyfs.workspace = true
racfs-plugin-queuefs.workspace = true
racfs-plugin-streamfs.workspace = true
racfs-plugin-vectorfs.workspace = true
racfs-vfs.workspace = true
